Segundo Commit: edite la info y los links

--- a/index.html
+++ b/index.html
@@ -17,12 +17,28 @@
         <a href="#" class="image avatar"
           ><img src="images/avatar.jpg" alt=""
         /></a>
+
         <h1>
-          <strong>Franco Montini</strong>,<br />
+          <strong>Franco Montini</strong>
           Full-Stack Developer.<br />
-          <a href="https://www.javascript.com/">JavaScript</a>,
-          <a href="https://www.typescriptlang.org/"> TypeScript</a>
         </h1>
+      </div>
+
+      <div>
+        <a href="https://www.javascript.com/" target="_blank">JavaScript</a>,
+        <a href="https://www.typescriptlang.org/" target="_blank"> TypeScript</a
+        >,
+        <a href="https://www.typescriptlang.org/" target="_blank"> React</a
+        >,<br />
+        <a href="https://www.typescriptlang.org/" target="_blank"> Node.js</a>,
+        <a href="https://www.typescriptlang.org/" target="_blank"> Redux</a>,
+        <a href="https://www.typescriptlang.org/" target="_blank"> APIs</a>,
+        <a href="https://www.typescriptlang.org/" target="_blank"> GitHub</a>
+        ,<br />
+        <a href="https://www.typescriptlang.org/" target="_blank"> JWT</a>,
+        <a href="https://www.typescriptlang.org/" target="_blank"> Sockets</a>,
+        <a href="https://www.typescriptlang.org/" target="_blank"> HTML</a>,
+        <a href="https://www.typescriptlang.org/" target="_blank"> CSS</a>,
       </div>
     </header>
 
@@ -52,76 +68,91 @@
       <section id="two">
         <h2>Proyects</h2>
         <div class="row">
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/01.jpg" class="image fit thumb"
+          <article class="col-6 col-12-xsmall">
+            <a href="" target="_blank" class="image fit thumb"
               ><img src="images/thumbs/01.jpg" alt=""
             /></a>
-            <h3>[Academico] JSeekers</h3>
-            <h4>Full Stack</h4>
+            <h4>[Academico] JSeekers</h4>
             <p>
               React, Node.js, Redux, Socket.io, Auth0, JavaScript, Tailwind,
               MercadoPago
             </p>
+            <a href="https://github.com/devmontini" target="_blank">
+              <p>Repo GitHub</p>
+            </a>
           </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/02.jpg" class="image fit thumb"
+          <article class="col-6 col-12-xsmall">
+            <a href="" target="_blank" class="image fit thumb"
               ><img src="images/thumbs/02.jpg" alt=""
             /></a>
-            <h3>[Academico] Countries App</h3>
-            <h4>Full Stack</h4>
+            <h4>[Academico] Countries App</h4>
             <p>React, Node.js, Redux, APIs.</p>
+            <a href="https://github.com/devmontini" target="_blank">
+              <p>Repo GitHub</p>
+            </a>
           </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/02.jpg" class="image fit thumb"
+          <article class="col-6 col-12-xsmall">
+            <a href="" target="_blank" class="image fit thumb"
               ><img src="images/thumbs/02.jpg" alt=""
             /></a>
-            <h3>[Academico] Weather App</h3>
-            <h4>Front</h4>
+            <h4>[Academico] Weather App</h4>
             <p>React, Redux, Fetch, APIs.</p>
+            <a href="https://github.com/devmontini" target="_blank">
+              <p>Repo GitHub</p>
+            </a>
           </article>
         </div>
       </section>
 
       <!-- Four -->
       <section>
-        <h3>Works</h3>
+        <h2>Works</h2>
         <div class="table-wrapper">
           <table>
             <thead>
               <tr>
-                <th>Name</th>
-                <th>Description</th>
+                <th>Company</th>
+                <th>Position</th>
                 <th>Year</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>KLI</td>
-                <td>Programador full stack</td>
+                <td>
+                  <a href="">KLI</a>
+                </td>
+                <td>Programador Full Stack</td>
                 <td>2021</td>
               </tr>
             </tbody>
           </table>
         </div>
-
-        <h3>Education</h3>
+      </section>
+      <section>
+        <h2>Education</h2>
         <div class="table-wrapper">
           <table class="alt">
             <thead>
               <tr>
-                <th>Name</th>
-                <th>Description</th>
+                <th>School</th>
+                <th>Degree</th>
                 <th>Year</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>HENRY</td>
-                <td>Bootcamp +800hs JavaScript</td>
+                <td>
+                  <a href="https://www.soyhenry.com/" target="_blank">
+                    HENRY
+                  </a>
+                </td>
+                <td>Bootcamp Full Stack Developer JavaScript</td>
                 <td>2021</td>
               </tr>
               <tr>
-                <td>Platzi</td>
+                <td>
+                  <a href="" target="_blank"> Platzi </a>
+                </td>
                 <td>Curso Profesional de Git y GitHub.</td>
                 <td>2022</td>
               </tr>
@@ -136,10 +167,16 @@
         <p>Por cualquier consulta escribime!</p>
         <div class="row">
           <div class="col-8 col-12-small">
-            <form method="post" action="#">
+            <form method="post" action="https://formspree.io/f/moqrlboq">
               <div class="row gtr-uniform gtr-50">
                 <div class="col-6 col-12-xsmall">
-                  <input type="text" name="name" id="name" placeholder="Name" />
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    placeholder="Name"
+                    required
+                  />
                 </div>
                 <div class="col-6 col-12-xsmall">
                   <input
@@ -147,6 +184,7 @@
                     name="email"
                     id="email"
                     placeholder="Email"
+                    required
                   />
                 </div>
                 <div class="col-12">
@@ -155,13 +193,14 @@
                     id="message"
                     placeholder="Message"
                     rows="4"
+                    required
                   ></textarea>
                 </div>
               </div>
+              <ul class="actions">
+                <li><input type="submit" value="Send Message" /></li>
+              </ul>
             </form>
-            <ul class="actions">
-              <li><input type="submit" value="Send Message" /></li>
-            </ul>
           </div>
           <div class="col-4 col-12-small">
             <ul class="labeled-icons">
@@ -194,7 +233,7 @@
             <a
               href="https://www.linkedin.com/in/devmontini/"
               target="_blank"
-              class="icon brands fa-dribbble"
+              class="icon brands fa-linkedin"
               ><span class="label">LinkedIn</span></a
             >
           </li>
