agregado weather app:

--- a/index.html
+++ b/index.html
@@ -54,13 +54,11 @@
         </header>
         <p>
           Soy programador Full-Stack, adquirí mis conocimientos en Henry
-          (bootcamp de +800hs intensivas en JavaScript), Platzi (manejo de Git,
-          GitHub y metodologías ágiles) y a través de investigaciones, trabajos
-          y tareas propias, pude expandir mis conocimientos para ser un
-          programador mucho mas completo. En mi experiencia pasada fui
-          Museografo, Curador y Montajista en diversos museos, los cuales me
-          aportaron la capacidad y experiencia para desarrollar proyectos y
-          trabajar en equipo.
+          (bootcamp de JavaScript), Platzi (manejo de Git, GitHub y metodologías
+          ágiles) y a través de investigaciones, trabajos y tareas propias. En
+          mi experiencia pasada fui Museografo, Curador y Montajista en diversos
+          museos, los cuales me aportaron la capacidad y experiencia para
+          desarrollar proyectos y trabajar en equipo.
         </p>
       </section>
 
@@ -68,6 +66,19 @@
       <section id="two">
         <h2>Proyects</h2>
         <div class="row">
+          <article class="col-6 col-12-xsmall">
+            <a
+              href="https://weather-app-65858.web.app/"
+              target="_blank"
+              class="image fit thumb"
+              ><img src="images/thumbs/02.jpg" alt=""
+            /></a>
+            <h4>Weather App</h4>
+            <p>React, Redux, Axios, Firebase, APIs.</p>
+            <a href="https://github.com/devmontini/weather-app" target="_blank">
+              <p>Repo GitHub</p>
+            </a>
+          </article>
           <article class="col-6 col-12-xsmall">
             <a href="" target="_blank" class="image fit thumb"
               ><img src="images/thumbs/01.jpg" alt=""
@@ -87,16 +98,6 @@
             /></a>
             <h4>[Academico] Countries App</h4>
             <p>React, Node.js, Redux, APIs.</p>
-            <a href="https://github.com/devmontini" target="_blank">
-              <p>Repo GitHub</p>
-            </a>
-          </article>
-          <article class="col-6 col-12-xsmall">
-            <a href="" target="_blank" class="image fit thumb"
-              ><img src="images/thumbs/02.jpg" alt=""
-            /></a>
-            <h4>[Academico] Weather App</h4>
-            <p>React, Redux, Fetch, APIs.</p>
             <a href="https://github.com/devmontini" target="_blank">
               <p>Repo GitHub</p>
             </a>
