--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <div class="row">
           <article class="col-6 col-12-xsmall">
             <a
-              href="https://weather-app-65858.web.app/"
+              href="https://weather-app-65858.firebaseapp.com/"
               target="_blank"
               class="image fit thumb"
-              ><img src="images/thumbs/02.jpg" alt=""
+              ><img src="images/thumbs/weather.jpg" alt=""
             /></a>
             <h4>Weather App</h4>
             <p>React, Redux, Axios, Firebase, APIs.</p>
@@ -94,7 +94,7 @@
           </article>
           <article class="col-6 col-12-xsmall">
             <a href="" target="_blank" class="image fit thumb"
-              ><img src="images/thumbs/02.jpg" alt=""
+              ><img src="images/thumbs/01.jpg" alt=""
             /></a>
             <h4>[Academico] Countries App</h4>
             <p>React, Node.js, Redux, APIs.</p>
