--- a/index.html
+++ b/index.html
@@ -27,18 +27,27 @@
       <div>
         <a href="https://www.javascript.com/" target="_blank">JavaScript</a>,
         <a href="https://www.typescriptlang.org/" target="_blank"> TypeScript</a
+        >, <a href="https://reactjs.org/" target="_blank"> React</a>,<br />
+        <a href="https://nodejs.org/" target="_blank"> Node.js</a>,
+        <a href="https://redux.js.org/" target="_blank"> Redux</a>,
+        <a href="https://developer.mozilla.org/es/docs/Web/API" target="_blank">
+          APIs</a
         >,
-        <a href="https://www.typescriptlang.org/" target="_blank"> React</a
-        >,<br />
-        <a href="https://www.typescriptlang.org/" target="_blank"> Node.js</a>,
-        <a href="https://www.typescriptlang.org/" target="_blank"> Redux</a>,
-        <a href="https://www.typescriptlang.org/" target="_blank"> APIs</a>,
-        <a href="https://www.typescriptlang.org/" target="_blank"> GitHub</a>
+        <a href="https://github.com/" target="_blank"> GitHub</a>
         ,<br />
-        <a href="https://www.typescriptlang.org/" target="_blank"> JWT</a>,
-        <a href="https://www.typescriptlang.org/" target="_blank"> Sockets</a>,
-        <a href="https://www.typescriptlang.org/" target="_blank"> HTML</a>,
-        <a href="https://www.typescriptlang.org/" target="_blank"> CSS</a>,
+        <a href="https://jwt.io/" target="_blank"> JWT</a>,
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+          target="_blank"
+        >
+          HTML</a
+        >,
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+          target="_blank"
+        >
+          CSS</a
+        >,
       </div>
     </header>
 
@@ -49,16 +58,16 @@
         <header class="major">
           <h2>
             Hola! este es mi portfolio de GitHub,<br />
-            aca podras encontrar los repos de mis trabajos y sus deploys.
+            aca podras encontrar los repos de mis apps y sus deploys.
           </h2>
         </header>
         <p>
-          Soy programador Full-Stack, adquirí mis conocimientos en Henry
-          (bootcamp de JavaScript), Platzi (manejo de Git, GitHub y metodologías
-          ágiles) y a través de investigaciones, trabajos y tareas propias. En
-          mi experiencia pasada fui Museografo, Curador y Montajista en diversos
-          museos, los cuales me aportaron la capacidad y experiencia para
-          desarrollar proyectos y trabajar en equipo.
+          Soy programador Full-Stack, adquirí mis conocimientos en el bootcamp
+          de Henry (JavaScript, React, Node.js, SQL), Platzi (manejo de Git,
+          GitHub y metodologías ágiles) y a través de investigaciones, trabajos
+          y tareas propias. En mi experiencia pasada fui Museografo, Curador y
+          Montajista en diversos museos, los cuales me aportaron la capacidad y
+          experiencia para desarrollar proyectos y trabajar en equipo.
         </p>
       </section>
 
