--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
         </header>
         <p>
           Soy programador Full-Stack, adquirí mis conocimientos en el bootcamp
-          de Henry (JavaScript, React, Node.js, SQL), Platzi (manejo de Git,
-          GitHub y metodologías ágiles) y a través de investigaciones, trabajos
-          y tareas propias. En mi experiencia pasada fui Museografo, Curador y
-          Montajista en diversos museos, los cuales me aportaron la capacidad y
-          experiencia para desarrollar proyectos y trabajar en equipo.
+          de Henry (JavaScript, React, Node.js, SQL), en la plataforma de Platzi
+          (manejo de Git, GitHub y metodologías ágiles) y a través de
+          investigaciones, trabajos y tareas propias. En mi experiencia pasada
+          fui Museografo, Curador y Montajista en diversos museos, los cuales me
+          aportaron la capacidad y experiencia para desarrollar proyectos y
+          trabajar en equipo.
         </p>
       </section>
 
