--- a/index.html
+++ b/index.html
@@ -103,13 +103,25 @@
             </a>
           </article>
           <article class="col-6 col-12-xsmall">
-            <a href="" target="_blank" class="image fit thumb"
+            <a
+              href="https://countries-app-cli.vercel.app/"
+              target="_blank"
+              class="image fit thumb"
               ><img src="images/thumbs/01.jpg" alt=""
             /></a>
             <h4>[Academico] Countries App</h4>
             <p>React, Node.js, Redux, APIs.</p>
-            <a href="https://github.com/devmontini" target="_blank">
-              <p>Repo GitHub</p>
+            <a
+              href="https://github.com/devmontini/countries-app-CLI"
+              target="_blank"
+            >
+              <p>Repo GitHub CLI</p>
+            </a>
+            <a
+              href="https://github.com/devmontini/countrie-app-API"
+              target="_blank"
+            >
+              <p>Repo GitHub API</p>
             </a>
           </article>
         </div>
