--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               href="https://countries-app-cli.vercel.app/"
               target="_blank"
               class="image fit thumb"
-              ><img src="images/thumbs/01.jpg" alt=""
+              ><img src="images/thumbs/weather.jpg" alt=""
             /></a>
             <h4>[Academico] Countries App</h4>
             <p>React, Node.js, Redux, APIs.</p>
