Listo tenchnologies countries

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               ><img src="images/thumbs/weather.jpg" alt=""
             /></a>
             <h4>Weather App</h4>
-            <p>React, Redux, Axios, Firebase, APIs.</p>
+            <p>React, Redux, Axios, Firebase, HTML/CSS, APIs.</p>
             <a href="https://github.com/devmontini/weather-app" target="_blank">
               <p>Repo GitHub</p>
             </a>
@@ -96,7 +96,8 @@
             <h4>[Academico] JSeekers</h4>
             <p>
               React, Node.js, Redux, Socket.io, Auth0, JavaScript, Tailwind,
-              MercadoPago
+              MercadoPago, Axios, Heroku, Vercel, Express, HTML/CSS, Sequelize,
+              PostgreSQL, APIs.
             </p>
             <a href="https://github.com/devmontini" target="_blank">
               <p>Repo GitHub</p>
@@ -110,19 +111,24 @@
               ><img src="images/thumbs/weather.jpg" alt=""
             /></a>
             <h4>[Academico] Countries App</h4>
-            <p>React, Node.js, Redux, APIs.</p>
-            <a
-              href="https://github.com/devmontini/countries-app-CLI"
-              target="_blank"
-            >
-              <p>Repo GitHub CLI</p>
-            </a>
-            <a
-              href="https://github.com/devmontini/countrie-app-API"
-              target="_blank"
-            >
-              <p>Repo GitHub API</p>
-            </a>
+            <p>
+              React, Node.js, Redux, Axios, Heroku, Vercel, Express, HTML/CSS,
+              Sequelize, PostgreSQL, APIs.
+            </p>
+            <div style="display: flex">
+              <a
+                href="https://github.com/devmontini/countries-app-CLI"
+                target="_blank"
+              >
+                <p>Repo GitHub CLI</p>
+              </a>
+              <a
+                href="https://github.com/devmontini/countrie-app-API"
+                target="_blank"
+              >
+                <p>Repo GitHub API</p>
+              </a>
+            </div>
           </article>
         </div>
       </section>
