--- a/index.html
+++ b/index.html
@@ -85,9 +85,14 @@
             /></a>
             <h4>Weather App</h4>
             <p>React, Redux, Axios, Firebase, HTML/CSS, APIs.</p>
-            <a href="https://github.com/devmontini/weather-app" target="_blank">
-              <p>Repo GitHub</p>
-            </a>
+            <div style="margin-bottom: 32px; display: flex">
+              <a
+                href="https://github.com/devmontini/weather-app"
+                target="_blank"
+              >
+                <p style="margin-bottom: 0%">Repo GitHub</p>
+              </a>
+            </div>
           </article>
           <article class="col-6 col-12-xsmall">
             <a href="" target="_blank" class="image fit thumb"
@@ -99,34 +104,41 @@
               MercadoPago, Axios, Heroku, Vercel, Express, HTML/CSS, Sequelize,
               PostgreSQL, APIs.
             </p>
-            <a href="https://github.com/devmontini" target="_blank">
-              <p>Repo GitHub</p>
-            </a>
+            <div style="margin-bottom: 32px; display: flex">
+              <a href="" target="_blank">
+                <p style="margin-bottom: 0%">Repo GitHub CLI</p>
+              </a>
+              <p style="margin-bottom: 0%">&nbsp;&nbsp;</p>
+              <a href="" target="_blank">
+                <p style="margin-bottom: 0%">Repo GitHub API</p>
+              </a>
+            </div>
           </article>
           <article class="col-6 col-12-xsmall">
             <a
               href="https://countries-app-cli.vercel.app/"
               target="_blank"
               class="image fit thumb"
-              ><img src="images/thumbs/weather.jpg" alt=""
+              ><img src="images/thumbs/countries.jpg" alt=""
             /></a>
             <h4>[Academico] Countries App</h4>
             <p>
               React, Node.js, Redux, Axios, Heroku, Vercel, Express, HTML/CSS,
               Sequelize, PostgreSQL, APIs.
             </p>
-            <div style="display: flex">
+            <div style="margin-bottom: 32px; display: flex">
               <a
                 href="https://github.com/devmontini/countries-app-CLI"
                 target="_blank"
               >
-                <p>Repo GitHub CLI</p>
+                <ps>Repo GitHub CLI</ps>
               </a>
+              <p style="margin-bottom: 0%">&nbsp;&nbsp;</p>
               <a
                 href="https://github.com/devmontini/countrie-app-API"
                 target="_blank"
               >
-                <p>Repo GitHub API</p>
+                <p style="margin-bottom: 0%">Repo GitHub API</p>
               </a>
             </div>
           </article>
