--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               class="image fit thumb"
               ><img src="images/thumbs/weather.jpg" alt=""
             /></a>
-            <h4>Weather App</h4>
+            <h4>[Personal] Weather App</h4>
             <p>React, Redux, Axios, Firebase, HTML/CSS, APIs.</p>
             <div style="margin-bottom: 32px; display: flex">
               <a
