--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
             </div>
           </article>
           <article class="col-6 col-12-xsmall">
-            <a href="" target="_blank" class="image fit thumb"
-              ><img src="images/thumbs/01.jpg" alt=""
+            <a
+              href="https://pf-seekerpro.herokuapp.com/"
+              target="_blank"
+              class="image fit thumb"
+              ><img src="images/thumbs/jseekers.jpg" alt=""
             /></a>
             <h4>[Academico] JSeekers</h4>
             <p>
@@ -105,12 +108,11 @@
               PostgreSQL, APIs.
             </p>
             <div style="margin-bottom: 32px; display: flex">
-              <a href="" target="_blank">
-                <p style="margin-bottom: 0%">Repo GitHub CLI</p>
-              </a>
-              <p style="margin-bottom: 0%">&nbsp;&nbsp;</p>
-              <a href="" target="_blank">
-                <p style="margin-bottom: 0%">Repo GitHub API</p>
+              <a
+                href="https://github.com/LuciaEnglender/SeekerPRO"
+                target="_blank"
+              >
+                <p style="margin-bottom: 0%">Repo GitHub CLI/API</p>
               </a>
             </div>
           </article>
@@ -192,9 +194,23 @@
               </tr>
               <tr>
                 <td>
-                  <a href="" target="_blank"> Platzi </a>
+                  <a
+                    href="https://platzi.com/p/fran_333_4/curso/1557-git-github/diploma/detalle/"
+                    target="_blank"
+                  >
+                    Platzi
+                  </a>
                 </td>
-                <td>Curso Profesional de Git y GitHub.</td>
+                <td>Professional course cur Git y GitHub</td>
+                <td>2022</td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="https://www.efset.org/cert/PAC5zT" target="_blank">
+                    EF SET
+                  </a>
+                </td>
+                <td>English level test - C1 Advance</td>
                 <td>2022</td>
               </tr>
             </tbody>
