Favicon and bio

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
   </head>
   <body class="is-preload">
     <!-- Header -->
@@ -63,9 +64,6 @@
         </p>
         <p>
           My hobbies? Museums, art and cultures. In my past, I was a museographer and editor of several museums and galleries in Cordoba (Argentina). 
-        </p>
-        <p>
-          My dream is to contribute with programming to museums!
         </p>
       </section>
 
@@ -186,7 +184,7 @@
                 <td>
                   <a href="" target="_blank">KLI</a>
                 </td>
-                <td>Frontend</td>
+                <td>Frontend in wordpress</td>
                 <td>2021</td>
               </tr>
               <tr>
