--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <!-- Cero -->
       <section id="cero">
         <header class="major">
-          <h2>Hello, world!
-            This is my portfolio.
+          <h2>Hello, world! <br/>
+            This is my GitHub portfolio.
           </h3>
         </header>
       </section>
