--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section id="one">
         <h2>About Me</h2>
         <p>
-          A Javascript and computer enthusiast! Passionate about the backend, its programming logic and cheatsheets. <br />I am currently learning Go and creating apps.
+          A Javascript and computer enthusiast! Passionate about apps, programming logic and cheatsheets. <br />Currently learning Go...
         </p>
         <p>
           My hobbies? Museums, art and cultures. In my past, I was a museographer and editor of several museums and galleries in Cordoba (Argentina). 
