--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta property="og:title" content="The Rock" />
-    <meta property="og:type" content="video.movie" />
+    <meta property="og:title" content="devMontini" />
     <meta property="og:url" content="https://devmontini.github.io/" />
     <meta property="og:image" content="https://i.ibb.co/DGbG01v/Thumbail.png" />
+    <meta property="og:image:type" content="image/png">
     <link
       href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css"
       rel="stylesheet"
