--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="https://nodejs.org/" target="_blank"> Node.js</a>,
         <a href="https://github.com/" target="_blank"> GitHub</a>,<br/>
         <a href="https://www.prisma.io/" target="_blank"> Prisma</a>,
-        <a href="https://sequelize.org/" target="_blank"> Sequaleeze</a>,
+        <a href="https://sequelize.org/" target="_blank"> Sequelize</a>,
         <a href="https://jwt.io/" target="_blank">JWT</a>,
         <a href="https://developer.mozilla.org/es/docs/Web/API" target="_blank">APIs</a>,<br/>
         <a href="https://reactjs.org/" target="_blank"> React</a>,
