--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <!-- Two -->
       <section id="two">
-        <h2>Proyects</h2>
+        <h2>Projects</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall">
             <a
