--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
         <div class="row">
           <article class="col-6 col-12-xsmall">
             <a
+              href="https://alejandromontini.com/"
+              target="_blank"
+              class="image2 fit thumb"
+              ><img src="images/thumbs/contacts.jpg" alt=""
+            /></a>
+            <h4>[Freelancer] SPA for Artist</h4>
+            <p>JavaScript, React, Tailwind, HTML/CSS, Firebase, Cloudnary, Hostinger.</p>
+            <div style="margin-bottom: 32px; display: flex">
+              <a
+                href="https://github.com/devmontini/alemontini-app"
+                target="_blank"
+              >
+                <ps>Repo CLI</ps>
+              </a>
+              <p style="margin-bottom: 0%">&nbsp;&nbsp;</p>
+            </div>
+          </article>
+          <article class="col-6 col-12-xsmall">
+            <a
               href="https://contacts-app-cli.vercel.app/"
               target="_blank"
               class="image2 fit thumb"
