listo ale montini

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               ><img src="images/thumbs/contacts.jpg" alt=""
             /></a>
             <h4>[Personal] Database Twitter App</h4>
-            <p>Prisma, PostgreSQL, JWT, TypeScript, Auth0, JavaScript, Node.js, React, Redux, Tailwind, Axios, Express, HTML/CSS, Tailwind, Heroku, Vercel.</p>
+            <p>Prisma, PostgreSQL, JWT, TypeScript, Auth0, JavaScript, Node.js, React, Redux, Axios, Express, HTML/CSS, Tailwind, Heroku, Vercel.</p>
             <div style="margin-bottom: 32px; display: flex">
               <a
                 href="https://github.com/devmontini/contacts-app-CLI"
