--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               href="https://alejandromontini.com/"
               target="_blank"
               class="image2 fit thumb"
-              ><img src="images/thumbs/contacts.jpg" alt=""
+              ><img src="images/thumbs/alemontini.jpg" alt=""
             /></a>
             <h4>[Freelancer] SPA for Artist</h4>
             <p>JavaScript, React, Tailwind, HTML/CSS, Firebase, Cloudnary, Hostinger.</p>
